--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Pregunton7</h1>
+  <h1>Pregunton</h1>
   <h4>Juego de Preguntas para Charlas interesantes</h4>
 
   <!-- Elemento de audio para el sonido del botón -->
