--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
 
   <!-- Enlace al archivo de funciones JavaScript -->
   <script src="pregunton_funciones.js"></script>
+
+   <!-- Footer -->
+   <footer>
+    &copy; 2024 Pregunton Git Codeer Web. Todos los derechos reservados.
+  </footer>
+
 </body>
 </html>
