--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <button onclick="nextQuestion()">Siguiente Pregunta</button>
   </div>
 
-  <!-- Enlace al archivo de funciones JavaScript -->
-  <script src="pregunton_funciones.js"></script>
-
    <!-- Footer -->
    <footer>
     &copy; 2024 Pregunton Git Codeer Web. Todos los derechos reservados.
+    <h3>Hola</h3>
   </footer>
+
+  <!-- Enlace al archivo de funciones JavaScript -->
+  <script src="pregunton_funciones.js"></script>
 
 </body>
 </html>
