--- a/index.html
+++ b/index.html
@@ -33,9 +33,19 @@
     <button onclick="nextQuestion()">Siguiente Pregunta</button>
   </div>
 
-   <!-- Footer -->
-   <footer>
-    &copy; 2024 Pregunton Git Codeer Web. Todos los derechos reservados.
+  <footer>
+    <footer>
+      <div class="footer-content">
+        <!-- Logo -->
+        <img src="logo_pregunton.png" alt="Logo de tu empresa">
+      <nav>
+        <ul>
+          <li><a href="https://www.notion.so/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
+          <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejoras en el Juego</a></li>
+          <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto</a></li>
+        </ul>
+      </nav>
+    &copy; 2024 Pregunton. Todos los derechos reservados.
     
   </footer>
 
