--- a/index.html
+++ b/index.html
@@ -34,23 +34,29 @@
   </div>
 
   <footer>
-    <footer>
-      <div class="footer-content">
-        <!-- Logo -->
-        <img src="logo_pregunton.png" alt="Logo de tu empresa">
-      <nav>
-        <ul>
+    <!-- Contenido del footer con el logo en el medio -->
+    <div class="footer-content" style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
+
+  <!-- Contenido del footer con el logo en el medio -->
+  <div class="footer-content">
+    <!-- Logo -->
+    <img src="logo_pregunton.png" alt="Logo de tu empresa">
+
+    <!-- Navegación del footer -->
+      <nav style="text-align: center;">
+        <ul style="display: inline-block; padding: 0; margin: 0;">
           <li><a href="https://www.notion.so/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
-          <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejoras en el Juego</a></li>
-          <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto</a></li>
+          <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
+          <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto Linkedin</a></li>
         </ul>
       </nav>
-    &copy; 2024 Pregunton. Todos los derechos reservados.
-    
-  </footer>
 
-  <!-- Enlace al archivo de funciones JavaScript -->
-  <script src="pregunton_funciones.js"></script>
+    <!-- Texto de derechos de autor -->
+    <p>&copy; 2024 Pregunton. Todos los derechos reservados.</p>
+  </div>
+
+<!-- Enlace al archivo de funciones JavaScript -->
+<script src="pregunton_funciones.js"></script>
 
 </body>
 </html>
