--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <!-- Configuración básica del documento -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>muchaspreguntas</title>
+  <title>preguntor</title>
 
   <!-- Enlace a la hoja de estilos externa -->
-  <link rel="stylesheet" type="text/css" href="pregunton_style.css">
+  <link rel="stylesheet" type="text/css" href="preguntor_style.css">
 </head>
 
 <body>
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Pregunton</h1>
+  <h1>Preguntor</h1>
   <h4>Juego de Preguntas para Charlas interesantes</h4>
 
   <!-- Elemento de audio para el sonido del botón -->
@@ -40,7 +40,7 @@
   <!-- Contenido del footer con el logo en el medio -->
   <div class="footer-content">
     <!-- Logo -->
-    <img src="logo_pregunton.png" alt="Logo de tu empresa">
+    <img src="logo.png" alt="Logo de tu empresa">
 
     <!-- Navegación del footer -->
       <nav style="text-align: center;">
@@ -52,11 +52,11 @@
       </nav>
 
     <!-- Texto de derechos de autor -->
-    <p>&copy; 2024 Pregunton. Todos los derechos reservados.</p>
+    <p>&copy; 2024 Preguntor. Todos los derechos reservados.</p>
   </div>
 
 <!-- Enlace al archivo de funciones JavaScript -->
-<script src="pregunton_funciones.js"></script>
+<script src="preguntor_funciones.js"></script>
 
 </body>
 </html>
