--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+  
+  <header>
+    <img src="ruta_del_logo.png" alt="Logo">
+    <nav>
+      <a href="pagina1.html">Página 1</a>
+      <a href="pagina2.html">Página 2</a>
+      <a href="pagina3.html">Página 3</a>
+    </nav>
+  </header>
+
+
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
   <h4>Juego de Preguntas para Charlas interesantes</h4>
