--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <img src="logo.png" alt="Logo de tu empresa">
 
     <!-- Texto de derechos de autor -->
-    <p>&copy;<h2>2024 Preguntor. Todos los derechos reservados.</h2> <p/>
+    <p>&copy; 2024 Preguntor. Todos los derechos reservados.</p>
   </div>
 
 <!-- Enlace al archivo de funciones JavaScript -->
