--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 </head>
 
 <body>
+  <header>
+    <div class="logo-container">
+      <img src="ruta_a_tu_logo.png" alt="Logo de tu sitio">
+    </div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="https://www.notion.so/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
+        <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
+        <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto Linkedin</a></li>
+      </ul>
+      <div class="menu-icon">&#9776;</div>
+    </nav>
+  </header>
+  
+
+
+
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
