--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="ruta_a_tu_logo.png" alt="Logo de tu sitio">
+      <img src="logo.png" alt="Logo de tu sitio">
     </div>
     <nav>
       <ul class="nav-links">
