--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="https://www.notion.so/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
+        <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
         <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto Linkedin</a></li>
       </ul>
