--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+  <label for="themeSelect">Selecciona un tema:</label>
+<select id="themeSelect">
+  <option value="economia">Economía</option>
+  <option value="pareja">Pareja</option>
+  <!-- Agrega opciones para otros temas -->
+</select>
+
   <header>
     <div class="logo-container">
       <img src="logo.png" alt="Logo de tu sitio">
@@ -19,7 +26,7 @@
       <ul class="nav-links">
         <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
-        <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Contacto Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
       </ul>
       <div class="menu-icon">&#9776;</div>
     </nav>
