--- a/index.html
+++ b/index.html
@@ -42,22 +42,23 @@
       <!-- Categoría de la pregunta (con clase CSS dinámica) -->
       <label for="themeSelect">Selecciona un tema:</label>
       <select id="themeSelect">
-        <option value="economia">Economía</option>
-        <option value="pareja">Pareja</option>
+        <option value="amor">Amor</option>
         <option value="ciencia">Ciencia</option>
-        <option value="psicologia">Psicología</option>
-        <option value="religion">Religión</option>
-        <option value="politica">Política</option>
         <option value="desarrollo">Desarrollo</option>
+        <option value="economia">Economía</option>
+        <option value="educacion">Educación</option>
+        <option value="etica">Ética</option>
         <option value="filosofia">Filosofía</option>
-        <option value="tecnologia">Tecnología</option>
         <option value="historia">Historia</option>
         <option value="historias-personales">Historias Personales</option>
         <option value="miedos">Miedos</option>
-        <option value="amor">Amor</option>
-        <option value="educacion">Educación</option>
         <option value="negocios">Negocios</option>
-        <option value="etica">Ética</option>
+        <option value="pareja">Pareja</option>
+        <option value="politica">Política</option>
+        <option value="psicologia">Psicología</option>
+        <option value="religion">Religión</option>
+        <option value="tecnologia">Tecnología</option>
+        <option value="todos">Todos los temas</option>
       </select>
       <div id="category" class="category economia">Economía</div>
       <!-- Título de la pregunta -->
