--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <option value="etica">Ética</option>
         <option value="filosofia">Filosofía</option>
         <option value="historia">Historia</option>
-        <option value="historias-personales">Historias-Personales</option>
+        <option value="vivencias">Vivencias</option>
         <option value="miedos">Miedos</option>
         <option value="negocios">Negocios</option>
         <option value="pareja">Pareja</option>
