--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
-  <h4>Juego de Preguntas para Charlas interesantes</h4>
+  <h4>Juego de Preguntas para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
 
