--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
         <option value="tecnologia">Tecnología</option>
         <option value="todos">Todos los temas</option>
       </select>
-      <div id="category" class="category economia">Economía</div>
       <!-- Título de la pregunta -->
       <h3>Pregunta:</h3>
+        <h4 id="category"> class="category economia">Economía</h4>
+    
       <h2 id="question">¿Cuál es tu perspectiva sobre la desigualdad económica?</h2>
     </div>
 
