--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </select>
       <!-- Título de la pregunta -->
       <h3>Pregunta:</h3>
-        <h4 id="category"> class="category economia">Economía</h4>
+        <h4 id="category" class="category economia"> Economía</h4>
       <h2 id="question">¿Cuál es tu perspectiva sobre la desigualdad económica?</h2>
     </div>
 
