--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Contenedor de la pregunta -->
     <div id="questionContainer">
       <!-- Categoría de la pregunta (con clase CSS dinámica) -->
-      <select id="themeSelect">
+      <select id="themeSelect" title="themeSelect">
         <option value="amor">Amor</option>
         <option value="ciencia">Ciencia</option>
         <option value="desarrollo">Desarrollo</option>
