--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <header>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <header>
     <div class="logo-container">
       <img src="logo.png" alt="Logo de tu sitio">
     </div>
@@ -54,7 +54,7 @@
     <!-- Contenedor de la pregunta -->
     <div id="questionContainer">
       <!-- Categoría de la pregunta (con clase CSS dinámica) -->
-      <select id="themeSelect" title="themeSelect">
+      <select id="themeSelect">
         <option value="amor">Amor</option>
         <option value="ciencia">Ciencia</option>
         <option value="desarrollo">Desarrollo</option>
