select en peligro

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
   <header>
     <div class="logo-container">
       <img src="logo.png" alt="Logo de tu sitio">
@@ -55,7 +55,7 @@
     <!-- Contenedor de la pregunta -->
     <div id="questionContainer">
       <!-- Categoría de la pregunta (con clase CSS dinámica) -->
-      <select id="themeSelect">
+      <select id="themeSelect" title="Selecciona un tema">
         <option value="amor">Amor</option>
         <option value="ciencia">Ciencia</option>
         <option value="desarrollo">Desarrollo</option>
