--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
   <header>
@@ -39,14 +39,11 @@
       <div class="menu-icon">&#9776;</div>
     </nav>
   </header>
-  
-
-
 
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
-  <h4>Juego de Preguntas Para Charlas Interesantes</h4>
+  <h4>Juego de Preguntas para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
 
