--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
-  <h4>Juego de Preguntas Para5 Charlas Interesantes</h4>
+  <h4>Juego de Preguntas Para6 Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
 
@@ -97,6 +97,10 @@
 
 <!-- Enlace al archivo de funciones JavaScript -->
 <script src="preguntor_funciones.js"></script>
+
+document.addEventListener('DOMContentLoaded', function() {
+  // Tu código aquí
+});
 
 </body>
 </html>
