--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul class="nav-links">
         <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
-        <a href="krisjaviermartinez@gmail.com">Enviar un correo electrónico</a>
+        <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
         <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
       </ul>
       <div class="menu-icon">&#9776;</div>
@@ -44,7 +44,7 @@
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
-  <h4>Juego de Preguntas Para14 Charlas Interesantes</h4>
+  <h4>Juego de Preguntas Para15 Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
 
