--- a/Preguntas Destacadas Pagas/planes.html
+++ b/Preguntas Destacadas Pagas/planes.html
@@ -3,6 +3,6 @@
         <title>Planes de pago</title>
     </head>
     <body>
-        <h1>¡Destaca con Preguntas que Inspiren Conversaciones Únicas en Preguntor!</h1>
+        <h1>¡1Destaca con Preguntas que Inspiren Conversaciones Únicas en Preguntor!</h1>
     </body>
 </html>
