--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- Botón para la siguiente pregunta (con llamada a función JavaScript) -->
     <button onclick="nextQuestion()">Siguiente Pregunta</button>
-    <button onclick="copyQuestion()">Copiar Pregunta</button>
+    <button onclick="compartirPregunta()">Compartir Pregunta</button>
     
   </div>
 
