--- a/index.html
+++ b/index.html
@@ -26,22 +26,13 @@
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-  <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="Logo de tu sitio">
-    </div>
-    <nav>
-      <ul class="nav-links">
-        
-        <li><a href="https://zinc-climb-c0a.notion.site/Deja-Tu-Huella-b31c004a588f4358852f2dbacbb77308?pvs=4">¡Deja Tu pregunta!</a></li>
-        <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
-        <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
-        <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
-        <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
-      </ul>
-      <div class="menu-icon">&#9776;</div>
-    </nav>
-  </header>
+      <!-- Incluir el header -->
+      <include src="header.html"></include>
+
+      <!-- Contenido específico de la página -->
+
+      <!-- Incluir el footer -->
+      <include src="footer.html"></include>
 
 
   <!-- Encabezado del cuerpo de la página -->
@@ -86,17 +77,6 @@
     
   </div>
 
-  <footer>
-    <!-- Contenido del footer con el logo en el medio -->
-    <div class="footer-content" style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
-
-  <!-- Contenido del footer con el logo en el medio -->
-  <div class="footer-content">
-    <!-- Logo -->
-    <img src="logo.png" alt="Logo de tu empresa">
-
-    <!-- Texto de derechos de autor -->
-    <p>&copy; 2024 Preguntor. Todos los derechos reservados.</p>
   </div>
 
 <!-- Enlace al archivo de funciones JavaScript -->
