--- a/preguntas_pagas/index.html
+++ b/preguntas_pagas/index.html
@@ -3,6 +3,13 @@
         <title>Hola metodos de pago</title>
     </head>
     <body>
+         <!-- Incluir el header -->
+            <include src="header.html"></include>
+
+            <!-- Contenido específico de la página -->
+
+            <!-- Incluir el footer -->
+            <include src="footer.html"></include>
         <h1>Estos son los metodos de pago disponibles</h1>
     </body>
 </html>
