header y footer en pagina principal

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML5NSC6C"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <!-- Incluir header -->
+    <iframe src="header.html" frameborder="0" width="100%" height="100"></iframe>
 
-      <!-- Incluir el header -->
-      <include src="header.html"></include>
+    <div>
+        <!-- Contenido de la primera página -->
+        <h1>Página 1</h1>
+        <!-- ... -->
+    </div>
 
-      <!-- Contenido específico de la página -->
-
-      <!-- Incluir el footer -->
-      <include src="footer.html"></include>
+    <!-- Incluir footer -->
+    <iframe src="footer.html" frameborder="0" width="100%" height="150"></iframe>
 
 
   <!-- Encabezado del cuerpo de la página -->
