--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
 </head>
 
 <body>
-    <!-- Incluir header -->
-    <iframe src="header.html" frameborder="0" width="100%" height="100"></iframe>
+  <div id="header-container"></div>
 
-    <div>
-        <!-- Contenido de la primera página -->
-        <h1>Página 1</h1>
-        <!-- ... -->
-    </div>
-
-    <!-- Incluir footer -->
-    <iframe src="footer.html" frameborder="0" width="100%" height="150"></iframe>
-
+  <!-- Contenido específico de la página -->
+  
+  <div id="footer-container"></div>
+  
+  <script>
+      // Cargar el contenido del header
+      document.getElementById('header-container').innerHTML = `
+          <object type="text/html" data="header.html" width="100%"></object>
+      `;
+  
+      // Cargar el contenido del footer
+      document.getElementById('footer-container').innerHTML = `
+          <object type="text/html" data="footer.html" width="100%"></object>
+      `;
+  </script>
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
