--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </script>
 
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Preguntor</h1>
+  <h1>Preguntor9</h1>
   <h4>Juego de Preguntas Para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
