--- a/footer.html
+++ b/footer.html
@@ -10,3 +10,5 @@
     <!-- Texto de derechos de autor -->
     <p>&copy; 2024 Preguntor. Todos los derechos reservados.</p>
   </div>
+</div>
+footer
