--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
         <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
         <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
       </ul>
+      <ul class="nav-links" id="menuToggle"></ul>
       <div class="menu-icon">&#9776;</div>
     </nav>
   </header>
+  <!-- Modificado el código del menú en el header -->
+
+      <!-- ... (tus elementos de la lista) ... -->
+  
+
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor1</h1>
