boton de deja tu pregunta

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
         <li><a href="https://www.linkedin.com/in/kristianmartinezcolina/">Linkedin De Founder </a></li>
       </ul>
+      <a href="https://zinc-climb-c0a.notion.site/Deja-Tu-Huella-b31c004a588f4358852f2dbacbb77308?pvs=4" class="leave-question-button">¡Deja tu pregunta!</a>
       <div class="menu-icon">&#9776;</div>
     </nav>
   </header>
