--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Configuración básica del documento -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>preguntor</title>
+  <title>preguntor8</title>
 
   <!-- Enlace a la hoja de estilos externa -->
   <link rel="stylesheet" type="text/css" href="preguntor_style.css">
