--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Configuración básica del documento -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>preguntor8</title>
+  <title>preguntor</title>
 
   <!-- Enlace a la hoja de estilos externa -->
   <link rel="stylesheet" type="text/css" href="preguntor_style.css">
@@ -43,7 +43,7 @@
 
 
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Preguntor</h1>
+  <h1>Preguntor8</h1>
   <h4>Juego de Preguntas Para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
