--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Preguntor8</h1>
+  <h1>Preguntor10</h1>
   <h4>Juego de Preguntas Para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
@@ -70,6 +70,7 @@
         <option value="psicologia">Psicología</option>
         <option value="religion">Religión</option>
         <option value="tecnologia">Tecnología</option>
+        <option value="sexo">Tecnología</option>
         <option value="todos">Todos los temas</option>
       </select>
       <!-- Título de la pregunta -->
