--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <option value="psicologia">Psicología</option>
         <option value="religion">Religión</option>
         <option value="tecnologia">Tecnología</option>
-        <option value="sexo">Tecnología</option>
+        <option value="sexo">sexo</option>
         <option value="todos">Todos los temas</option>
       </select>
       <!-- Título de la pregunta -->
