nuevo_diseño_cajarespuesta

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
   </div>
   
   <!-- Botón para mostrar u ocultar la caja de texto -->
-  <button id="showAnswerBoxButton" onclick="toggleAnswerBox()">Escribe tu respuesta</button>
-  
-  <!-- Contenedor de la caja de texto (inicialmente oculto) -->
-  <div id="answerBoxContainer" style="display: none;">
-    <!-- Caja de texto para escribir la respuesta -->
-    <textarea id="answerBox" rows="4" placeholder="Escribe tu respuesta aquí..."></textarea>
-    <!-- Botón para enviar la respuesta -->
-    <button onclick="sendAnswer()">Enviar</button>
-  </div>
+<button id="showAnswerBoxButton" onclick="toggleAnswerBox()">
+  <span>&#x25BC;</span> Respuesta
+</button>
+
+<!-- Contenedor de la caja de texto (inicialmente oculto) -->
+<div id="answerBoxContainer" style="display: none;">
+  <!-- Caja de texto para escribir la respuesta -->
+  <textarea id="answerBox" rows="4" placeholder="Escribe tu respuesta aquí..."></textarea>
 </div>
+
 
 
     <!-- Botón para la siguiente pregunta (con llamada a función JavaScript) -->
