--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <!-- Contenedor de la caja de texto (inicialmente oculto) -->
 <div id="answerBoxContainer" style="display: none;">
   <!-- Caja de texto para escribir la respuesta -->
-  <div id="answerBox" contenteditable="true" placeholder="Escribe tu respuesta aquí..." style="background-color: #eeeded; padding: 10px; border: 2px solid #000000; border-radius: 5px; font-family: 'Playfair Display', serif; font-size: 16px; line-height: 1.5; width: auto;"></div>
+  <div id="answerBox" contenteditable="true" placeholder="Escribe tu respuesta aquí..." style="background-color:#fff; padding: 10px; border: 2px solid #000000; border-radius: 5px; font-family: 'Playfair Display', serif; font-size: 16px; line-height: 1.5; width: auto;"></div>
 </div>
 <!--0000000-->
 
