--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Contenedor de la pregunta -->
     <div id="questionContainer">
       <!-- Categoría de la pregunta (con clase CSS dinámica) -->
-      <select id="themeSelect" <span>&#x25BC;</span> title="Selecciona un tema">
+      <select id="themeSelect" title="Selecciona un tema">
         <option value="amor">Amor</option>
         <option value="ciencia">Ciencia</option>
         <option value="desarrollo">Desarrollo</option>
