--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <!-- Configuración básica del documento -->
+  <link rel="icon" type="image/png" href="logotipo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>preguntor</title>
