--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
   <!-- Encabezado del cuerpo de la página -->
-  <h1>Preguntor23</h1>
+  <h1>Preguntor</h1>
   <h4>Juego de Preguntas Para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
@@ -106,7 +106,7 @@
         <img src="logo.png" alt="Logo de tu empresa">
 
         <!-- Texto de derechos de autor -->
-        <p>&copy; 2024 Preguntor. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Preguntor. Todos los derechos reservados. v1.2.0.1</p>
     </div>
 </footer>
 
