--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="https://zinc-climb-c0a.notion.site/Deja-Tu-Huella-b31c004a588f4358852f2dbacbb77308?pvs=4">¡Deja Tu pregunta!</a></li>
+        <li><a href="https://preguntor.github.io/planes/destacada">¡Destaca Tu pregunta!</a></li>
+        <li><a href="Youtube.com">Reglas del Juego</a></li>
         <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
         <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
