--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="Logo de tu sitio">
+      <img src="logo_blanco.png" alt="Logo de tu sitio">
     </div>
     <nav>
       <ul class="nav-links">
@@ -104,7 +104,7 @@
     <div class="footer-content" style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
 
         <!-- Logo -->
-        <img src="logo.png" alt="Logo de tu empresa">
+        <img src="logo_blanco.png" alt="Logo de tu empresa">
 
         <!-- Texto de derechos de autor -->
         <p>&copy; 2024 Preguntor. Todos los derechos reservados. v1.2.0.1</p>
