--- a/planes/destacada.html
+++ b/planes/destacada.html
@@ -31,7 +31,7 @@
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Precio:</strong> 3.500 COP</p>
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Tiempo:</strong> 7 Dias</p>
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Cantidad:</strong> Una (1) Pregunta</p>
-            <a href="https://preguntor.github.io/">
+            <a href="https://bit.ly/plandeexploracion">
               <button id="button_plan" onclick="pay()">¡Comprar ahora!</button>
             </a>
           </div>
@@ -42,7 +42,7 @@
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Precio:</strong> 4.500 COP</p>
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Tiempo:</strong> 10 Dias</p>
             <p><strong><img src="iconos/controlar.png" alt="Icono Precio" class="icon-small"> Cantidad:</strong> Una (1) Pregunta</p>
-            <a href="https://preguntor.github.io/">
+            <a href="https://bit.ly/plandeconocimientos">
               <button id="button_plan" onclick="pay()">¡Comprar ahora!</button>
             </a>
           </div>
@@ -165,7 +165,7 @@
                 <td>1</td>
                 <td>3.500 COP</td>
                 <td>---</td>
-                <td><a href="#planes" class="button_plan">Comprar</a></td>
+                <td><a href="https://bit.ly/plandeexploracion" class="button_plan">Comprar</a></td>
 
             </tr>
             <tr>
@@ -177,7 +177,7 @@
                 <td>1</td>
                 <td>4.500 COP</td>
                 <td>---</td>
-                <td><a href="#planes" class="button_plan">Comprar</a></td>
+                <td><a href="https://bit.ly/plandeconocimientos" class="button_plan">Comprar</a></td>
 
             </tr>
             <tr>
