--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="https://preguntor.github.io/planes/destacada">¡Destaca Tu pregunta!</a></li>
-        <li><a href="Youtube.com">Reglas del Juego</a></li>
+        <li><a href="https://zinc-climb-c0a.notion.site/Reglas-de-Preguntor-b31f21a596d549559b671b83966f3a9d">Reglas del Juego</a></li>
         <li><a href="https://zinc-climb-c0a.notion.site/Historia-de-Pregunton-ee4348144752467681523696789fa17b?pvs=4">Historia</a></li>
         <li><a href="https://forms.gle/gZsbmRtreD2pjVDo6">Mejora El Juego</a></li>
         <li><a href="https://github.com/preguntor/preguntor.github.io">Un Juego de Codigo Abierto</a></li>
