--- a/planes/destacada.html
+++ b/planes/destacada.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" href="logotipo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="plan.css">
+    <link rel="stylesheet" href="planes/plan.css">
     <title>Planes</title>
 </head>
 <body>
@@ -22,7 +22,6 @@
 
     
     <h1>¡Destaca con Preguntas que Inspiren Conversaciones Únicas en Preguntor!</h1>
-    
     <div class="plans-container">
         <div id="planes" class="plans-slider">
           <div class="plan" onclick="togglePlan(this)">
