--- a/planes/destacada.html
+++ b/planes/destacada.html
@@ -114,7 +114,7 @@
 
     <h4>Usuarios</h4>
     <div class="image-container_ejemplo_2">
-        <img src="unic_app.png" alt="Ejemplo Imagen" class="responsive-image">
+        <img src="unic_app1.png" alt="Ejemplo Imagen" class="responsive-image">
     </div>
 
     <h4>Garantia</h4>
