--- a/planes/destacada.html
+++ b/planes/destacada.html
@@ -119,7 +119,7 @@
 
     <h2>Usuarios</h2>
     <div class="image-container_ejemplo_2">
-        <img src="unic_app.png" alt="Ejemplo Imagen" class="responsive-image">
+        <img src="unic_app1.png" alt="Ejemplo Imagen" class="responsive-image">
     </div>
 
     <h2>Garantia</h2>
