--- a/destacada/planes.html
+++ b/destacada/planes.html
@@ -36,7 +36,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-eced"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
-          <img src="images/logo.png" class="u-logo-image u-logo-image-1">
+          <img src="logo.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header> 
     <section class="u-clearfix u-custom-color-1 u-section-1" id="carousel_65bf">
@@ -465,7 +465,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   
     <footer class="u-clearfix u-custom-color-1 u-footer" id="sec-65c1"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
-          <img src="images/logo.png" class="u-logo-image u-logo-image-1">
+          <img src="logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center u-text u-text-default u-text-1">© 2024 Preguntor. Todos los derechos reservados. v1.2.0.1 </p>
         <div class="u-align-left u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1"></div>
