--- a/destacada/planes.html
+++ b/destacada/planes.html
@@ -464,7 +464,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
   
     <footer class="u-clearfix u-custom-color-1 u-footer" id="sec-65c1"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
+        <a href="destacada/logo2.png" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
           <img src="destacada/logo2.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center u-text u-text-default u-text-1">© 2024 Preguntor. Todos los derechos reservados. v1.2.0.1 </p>
