--- a/destacada/planes.html
+++ b/destacada/planes.html
@@ -37,6 +37,7 @@
   <body data-path-to-root="./" data-include-products="false" class="u-body u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-eced"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://preguntor.github.io/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
           <img src="destacada/images/logo2.png" class="u-logo-image u-logo-image-1">
+          <p class="u-align-center u-text u-text-default u-text-1">© 2024 Preguntor. Todos los derechos reservados. v1.2.0.1 </p>
         </a>
       </div></header> 
     <section class="u-clearfix u-custom-color-1 u-section-1" id="carousel_65bf">
