--- a/destacada/planes.html
+++ b/destacada/planes.html
@@ -45,7 +45,7 @@
           <div class="u-layout-row">
             <div class="u-align-left u-container-style u-custom-color-2 u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
-                <h1 class="u-text u-title u-text-1">¡Haz Pregunta!</h1>
+                <h1 class="u-text u-title u-text-1">¡Haz Una Pregunta!</h1>
                 <p class="u-text u-text-2">Destaca tu Pregunta y publícala en Preguntor y Empieza a Crear Conexiones con las person<span style="font-weight: 700;"></span>as a traves de conversaciones interesantes. 
                 </p>
                 <a href="planes.html#carousel_d409" class="u-active-none u-btn u-button-style u-custom-color-1 u-custom-font u-font-raleway u-hover-custom-color-3 u-btn-1">Ver Planes </a>
