--- a/planes.html
+++ b/planes.html
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://preguntor.nicepage.io/planes.html?version=b786e91b-b3c9-1def-301e-feacc3dc4f70" data-home-page-title="planes" data-path-to-root="./" data-include-products="false" class="u-body u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-eced"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-eced"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -472,5 +472,16 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">© 2024 Preguntor. Todos los derechos reservados. v1.2.0.1 </p>
         <div class="u-align-left u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-55 u-line-1"></div>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-mockup" target="_blank">
+        <span>Website Mockup</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
+        <span>HTML Website Builder</span>
+      </a>. 
+    </section>
   
 </body></html>
