--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <!-- Configuración básica del documento -->
-  <link rel="icon" type="image/png" href="logotipo.png">
+  <link rel="icon" type="image/png" href="precios/images/logotipo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>preguntor</title>
@@ -24,7 +24,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="Logo de tu sitio">
+      <img src="precios/images/logo.png" alt="Logo de tu sitio">
     </div>
     <nav>
       <ul class="nav-links">
@@ -103,7 +103,7 @@
     <div class="footer-content" style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;">
 
         <!-- Logo -->
-        <img src="logo.png" alt="Logo de tu empresa">
+        <img src="precios/images/logo.png" alt="Logo de tu empresa">
 
         <!-- Texto de derechos de autor -->
         <p>&copy; 2024 Preguntor. Todos los derechos reservados. v1.2.0.1</p>
