--- a/precios/index.html
+++ b/precios/index.html
@@ -466,7 +466,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <footer class="u-clearfix u-custom-color-1 u-footer" id="sec-65c1"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
+        <a href="https://preguntor.github.io/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">© 2024 Preguntor. Todos los derechos reservados. v1.2.0.1 </p>
