--- a/precios/index.html
+++ b/precios/index.html
@@ -38,7 +38,7 @@
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="https://preguntor.nicepage.io/planes.html?version=b786e91b-b3c9-1def-301e-feacc3dc4f70" data-home-page-title="planes" data-path-to-root="./" data-include-products="false" class="u-body u-stick-footer u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-eced"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
+        <a href="https://preguntor.github.io/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="280">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header> 
