--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
   <!-- Encabezado del cuerpo de la página -->
   <h1>Preguntor</h1>
+  <h4>
+    <span>Juego de Preguntas</span>
+    <span>Para Charlas Interesantes</span>
+  </h4>
   <h4>Juego de Preguntas Para Charlas Interesantes</h4>
   <!-- Elemento de audio para el sonido del botón -->
   <audio id="audio" src="audio_boton_siguiente.mp3"></audio>
