--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       </select>
       <!-- Título de la pregunta -->
       <h3>Pregunta:</h3>
-        <h4 id="category" class="category economia"> Amor</h4>
-      <h2 id="question"> 1. ¿Cómo influyen tus experiencias familiares en tu percepción del amor?,
+        <h4 id="category" class="category amor"> Amor</h4>
+      <h2 id="question"> 1. ¿Cómo influyen tus experiencias familiares en tu percepción del amor?
       </h2>
     </div>
 
